--- a/home.html
+++ b/home.html
@@ -2,7 +2,8 @@
 <html lang="fr" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Ignis Fatuus</title>
   </head>
   <body>
 
