ajout div banniere

--- a/home.html
+++ b/home.html
@@ -6,6 +6,10 @@
     <title>Ignis Fatuus</title>
   </head>
   <body>
-
+    <main>
+      <div class="baniere">
+        
+      </div>
+    </main>
   </body>
 </html>
