--- a/home.html
+++ b/home.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <main>
-      <div class="banniere"></div>
+      <div class="banniere">
+        <img src="" alt="">
+      </div>
       <div class="groupe">
         <div class="photoG1"></div>
         <div class="text"><p>IGNIS FATUUS groupe de Thrash Death Metal du Pays de Montbéliard (France) prend vie fin 1995. Le groupe, après plusieurs changements de line up, sort 3 démos 4 titres sur la période 1996 - 2002 (The Last Church - Into The Depths Of Flesh et Rebirth) SOLD OUT 3 x 200 exemplaires, à l’époque influencées par des groupes tels CORONER, DEATH, MALEVOLENT CREATION…. En parallèle IGNIS FATUUS asso organise quelques concerts principalement sur l’Atelier Des Môles salle Rock Metal mythique de Montbéliard. Après une période d’inactivité de 2002 à 2010, IGNIS FATUUS prend la décision de lancer un projet musical de grande ampleur et l’album conceptuel « Soulbreaker » voit le jour fin 2012.
