--- a/home.html
+++ b/home.html
@@ -6,6 +6,19 @@
     <title>Ignis Fatuus</title>
   </head>
   <body>
+    <header>
+      <div class="menu">
+        <ul>
+          <li><a href="#">le groupe</a></li>
+          <li><a href="#">discographie</a></li>
+          <li><a href="#">concerts</a></li>
+          <li><a href="#">ignis fatuus</a></li>
+          <li><a href="#">media</a></li>
+          <li><a href="#">contact</a></li>
+          <li><a href="#">shop</a></li>
+        </ul>
+      </div>
+    </header>
     <main>
       <div class="baniere">
       </div>
