--- a/home.html
+++ b/home.html
@@ -22,10 +22,12 @@
     </header>
     <main>
       <div class="banniere">
-        <img src="" alt="">
+        <img src="assets/img/banniere.jpg" alt="banniere">
       </div>
       <div class="groupe">
-        <div class="photoG1"></div>
+        <div class="photoG1">
+          <img src="assets/img/ignisfatuusgroup.jpg" alt="groupe">
+        </div>
         <div class="text"><p>IGNIS FATUUS groupe de Thrash Death Metal du Pays de Montbéliard (France) prend vie fin 1995. Le groupe, après plusieurs changements de line up, sort 3 démos 4 titres sur la période 1996 - 2002 (The Last Church - Into The Depths Of Flesh et Rebirth) SOLD OUT 3 x 200 exemplaires, à l’époque influencées par des groupes tels CORONER, DEATH, MALEVOLENT CREATION…. En parallèle IGNIS FATUUS asso organise quelques concerts principalement sur l’Atelier Des Môles salle Rock Metal mythique de Montbéliard. Après une période d’inactivité de 2002 à 2010, IGNIS FATUUS prend la décision de lancer un projet musical de grande ampleur et l’album conceptuel « Soulbreaker » voit le jour fin 2012.
 
 IGNIS FATUUS traite de sujets variés comme la condition humaine,la souffrance, la mort et l’inexpliqué, les religions, le terrorisme, les révolutions des peuples, les dérives du capitalisme outrancier, l’écologie, la sauvegarde de la planète….etc
@@ -34,8 +36,12 @@ Le nouvel album sorti sur l’automne 2019 s’intitule « Under Command Of The
 
 IGNIS FATUUS a partager la scène avec ADX, DRAKKAR, NO RETURN, MISANTHROPE, INHUMATE, DEATH DECLINE, MERCYLESS, THE CROWN, SACRILEGE, WATCHA, NOSTROMO, CARCARIASS, BROKEN EDGE, DOWNRIGHT MALICE, BORN AGAIN, POST MORTEM, AWAKE, DAWOHL, PHENIX, APOPLEXY, ANOREXIA, DISMAL et beaucoup d’autres ……
 </p></div>
-        <div class="photoG2"></div>
-        <div class="photoG3"></div>
+        <div class="photoG2">
+          <img src="assets/img/ignisfatuusscene.jpg" alt="live">
+        </div>
+        <div class="photoG3">
+          <img src="assets/img/ignisfatuusmusician.jpg" alt="zicos">
+        </div>
       </div>
       <div class="medias"></div>
         <div class="video"></div>
