--- a/home.html
+++ b/home.html
@@ -10,11 +10,11 @@
     <header>
       <div class="menu">
         <ul>
-          <li><a href="#">le groupe</a></li>
-          <li><a href="#">discographie</a></li>
-          <li><a href="#">concerts</a></li>
+          <li><a href="#Legroupe">le groupe</a></li>
+          <li><a href="#Discographie">discographie</a></li>
+          <li><a href="#Concerts">concerts</a></li>
           <li><a href="#">ignis fatuus</a></li>
-          <li><a href="#">media</a></li>
+          <li><a href="#Medias">media</a></li>
           <li><a href="#">contact</a></li>
           <li><a href="#">shop</a></li>
         </ul>
@@ -24,7 +24,8 @@
       <div class="banniere">
         <img src="assets/img/banniere.jpg" alt="banniere">
       </div>
-      <div class="groupe">
+      <div class="groupe" id="Legroupe">
+        <h2>Le groupe</h2>
         <div class="photoG1">
           <img src="assets/img/ignisfatuusgroup.jpg" alt="groupe">
         </div>
@@ -43,11 +44,18 @@ IGNIS FATUUS a partager la scène avec ADX, DRAKKAR, NO RETURN, MISANTHROPE, INH
           <img src="assets/img/ignisfatuusmusician.jpg" alt="zicos">
         </div>
       </div>
-      <div class="medias"></div>
+      <div class="medias" id="Medias">
+          <h2>Médias</h2>
+      </div>
         <div class="video"></div>
         <div class="caroussel"></div>
-      <div class="discographie"></div>
-      <div class="concerts"></div>
+      <div class="discographie"id="Discographie">
+        <h2>Discographie</h2>
+      </div>
+      <div class="concerts" id="Concerts">
+        <h2>Concerts</h2>
+        <p>A venir</p>
+      </div>
     </main>
   </body>
 </html>
