--- a/home.html
+++ b/home.html
@@ -13,7 +13,7 @@
           <li><a href="#">le groupe</a></li>
           <li><a href="#">discographie</a></li>
           <li><a href="#">concerts</a></li>
-          <li><a href="#">ignis fatuus</a></li>
+          <li><a href="#"><h1>Ignis Fatuus</h1></a></li>
           <li><a href="#">media</a></li>
           <li><a href="#">contact</a></li>
           <li><a href="#">shop</a></li>
