--- a/home.html
+++ b/home.html
@@ -24,12 +24,17 @@
       <div class="banniere">
         <img src="assets/img/banniere.jpg" alt="banniere">
       </div>
+
       <div class="groupe" id="Legroupe">
-        <h2>Le groupe</h2>
+        <div class="space wspaceg">
+          <h2>Le groupe</h2>
+          <div class="spacer wspacerg"></div>
+        </div>
         <div class="photoG1">
           <img src="assets/img/ignisfatuusgroup.jpg" alt="groupe">
         </div>
-        <div class="text"><p>IGNIS FATUUS groupe de Thrash Death Metal du Pays de Montbéliard (France) prend vie fin 1995. Le groupe, après plusieurs changements de line up, sort 3 démos 4 titres sur la période 1996 - 2002 (The Last Church - Into The Depths Of Flesh et Rebirth) SOLD OUT 3 x 200 exemplaires, à l’époque influencées par des groupes tels CORONER, DEATH, MALEVOLENT CREATION…. En parallèle IGNIS FATUUS asso organise quelques concerts principalement sur l’Atelier Des Môles salle Rock Metal mythique de Montbéliard. Après une période d’inactivité de 2002 à 2010, IGNIS FATUUS prend la décision de lancer un projet musical de grande ampleur et l’album conceptuel « Soulbreaker » voit le jour fin 2012.
+
+      <div class="text"><p>IGNIS FATUUS groupe de Thrash Death Metal du Pays de Montbéliard (France) prend vie fin 1995. Le groupe, après plusieurs changements de line up, sort 3 démos 4 titres sur la période 1996 - 2002 (The Last Church - Into The Depths Of Flesh et Rebirth) SOLD OUT 3 x 200 exemplaires, à l’époque influencées par des groupes tels CORONER, DEATH, MALEVOLENT CREATION…. En parallèle IGNIS FATUUS asso organise quelques concerts principalement sur l’Atelier Des Môles salle Rock Metal mythique de Montbéliard. Après une période d’inactivité de 2002 à 2010, IGNIS FATUUS prend la décision de lancer un projet musical de grande ampleur et l’album conceptuel « Soulbreaker » voit le jour fin 2012.
 
 IGNIS FATUUS traite de sujets variés comme la condition humaine,la souffrance, la mort et l’inexpliqué, les religions, le terrorisme, les révolutions des peuples, les dérives du capitalisme outrancier, l’écologie, la sauvegarde de la planète….etc
 En 2016 sort un second gros projet « Second Offering » traitant des religions polythéistes. Des titres plus percutants, sombres et directs avec toujours ces guitares mélodiques et rapides qui font l’image du combo. Cet opus beaucoup moins expérimental, plus heavy death, marque un virage certain avec l’intégration d’une nouvelle section basse batterie ultra efficace.
@@ -45,15 +50,24 @@ IGNIS FATUUS a partager la scène avec ADX, DRAKKAR, NO RETURN, MISANTHROPE, INH
         </div>
       </div>
       <div class="medias" id="Medias">
+        <div class="space wmspace">
           <h2>Médias</h2>
+          <div class="spacer wmspacer"></div>
+        </div>
       </div>
         <div class="video"></div>
         <div class="caroussel"></div>
       <div class="discographie"id="Discographie">
-        <h2>Discographie</h2>
+        <div class="space wmspace">
+          <h2>Discographie</h2>
+          <div class="spacer wmspacer"></div>
+        </div>
       </div>
       <div class="concerts" id="Concerts">
-        <h2>Concerts</h2>
+        <div class="space wmspace">
+          <h2>Concerts</h2>
+          <div class="spacer wmspacer"></div>
+        </div>
         <p>A venir</p>
       </div>
     </main>
