--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ignis Fatuus</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawsome.com/6f0e7bdd3b.js"></script>
   </head>
   <body>
     <header>
@@ -71,5 +72,18 @@ IGNIS FATUUS a partager la scène avec ADX, DRAKKAR, NO RETURN, MISANTHROPE, INH
         <p>A venir</p>
       </div>
     </main>
+    <footer>
+      <a class="btn" href="#">Contactez-nous</a>
+      <div class="mentions">
+        <p>Conception : <span>Katia PARISOT</span>  Développement : <span>Julien DEMOUGIN</span></p>
+        <p class=copyright><span><a href="">© Ignis Fatuus </a><label id="year_copy"></label></span></p>
+      </div>
+      <ul class="socialMedia">
+        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+        <li><a href="#"></a><i class="fab fa-youtube"></i></li>
+      </ul>
+
+    </footer>
   </body>
+  <script src="assets/js/script.js"></script>
 </html>
