--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ignis Fatuus</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawsome.com/6f0e7bdd3b.js"></script>
+    <script src="https://kit.fontawesome.com/6f0e7bdd3b.js"></script>
   </head>
   <body>
     <header>
