ajout lien YT discographie footer

--- a/home.html
+++ b/home.html
@@ -50,20 +50,30 @@ IGNIS FATUUS a partager la scène avec ADX, DRAKKAR, NO RETURN, MISANTHROPE, INH
           <img src="assets/img/ignisfatuusmusician.jpg" alt="zicos">
         </div>
       </div>
+
       <div class="medias" id="Medias">
         <div class="space wmspace">
           <h2>Médias</h2>
           <div class="spacer wmspacer"></div>
         </div>
       </div>
-        <div class="video"></div>
-        <div class="caroussel"></div>
+        <div class="video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/q-EFTOUmQ3s" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div class="caroussel">      </div>
+
       <div class="discographie"id="Discographie">
         <div class="space wmspace">
           <h2>Discographie</h2>
           <div class="spacer wmspacer"></div>
+      <img class="photoD1" src="assets/img/ignisfatuussoulbreaker.png" alt="soulbreaker">
+      <img class="photoD2" src="assets/img/ignisfatuussecondoffering.JPG" alt="secondoffering">
+      <img class="photoD3" src="assets/img/ignisfatuusundercommand.jpg" alt="undercommand">
+
+
         </div>
       </div>
+
       <div class="concerts" id="Concerts">
         <div class="space wmspace">
           <h2>Concerts</h2>
@@ -72,18 +82,21 @@ IGNIS FATUUS a partager la scène avec ADX, DRAKKAR, NO RETURN, MISANTHROPE, INH
         <p>A venir</p>
       </div>
     </main>
+
     <footer>
-      <a class="btn" href="#">Contactez-nous</a>
+      <div class="btn">
+        <a class="btn" href="#">Contactez-nous</a>
+      </div>
+
       <div class="mentions">
-        <p>Conception : <span>Katia PARISOT</span>  Développement : <span>Julien DEMOUGIN</span></p>
+        <p>Conception : <span><a href="http://katiaparisot.fr/">Katia PARISOT</a></span>  Développement : <span><a href="https://juliendemougin.fr">Julien DEMOUGIN</a></span></p>
         <p class=copyright><span><a href="">© Ignis Fatuus </a><label id="year_copy"></label></span></p>
       </div>
       <ul class="socialMedia">
-        <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-        <li><a href="#"></a><i class="fab fa-youtube"></i></li>
+        <li><a href="#"><i class="fab fa-facebook-f fa-x2"></i></a></li>
+        <li><a href="#"></a><i class="fab fa-youtube fa-x2"></i></li>
       </ul>
-
-    </footer>
+  </footer>
   </body>
   <script src="assets/js/script.js"></script>
 </html>
