--- a/home.html
+++ b/home.html
@@ -14,7 +14,7 @@
           <li><a href="#Legroupe">le groupe</a></li>
           <li><a href="#Discographie">discographie</a></li>
           <li><a href="#Concerts">concerts</a></li>
-          <li><a href="#"><h1>Ignis Fatuus</h1></a></li>
+          <li><a href="#"><img src="assets/img/ignisfatuuslogo.png" alt=""><h1>Ignis Fatuus</h1></a></li>
           <li><a href="#Medias">media</a></li>
           <li><a href="#">contact</a></li>
           <li><a href="#">shop</a></li>
