--- a/contact.html
+++ b/contact.html
@@ -87,20 +87,21 @@
             <a class="btn" href="#">Envoyer</a>
       </div>
     </main>
+
+    <footer>
+      <div class="button">
+        <a class="btn btnf" href="#">Contactez-nous</a>
+      </div>
+
+      <div class="mentions">
+        <p>Conception : <span><a href="http://katiaparisot.fr/">Katia PARISOT</a></span>  Développement : <span><a href="https://juliendemougin.fr">Julien DEMOUGIN</a></span></p>
+        <p class=copyright><span><a href="">© Ignis Fatuus </a><label id="year_copy"></label></span></p>
+      </div>
+      <ul class="socialMedia">
+        <li><a href="https://www.facebook.com/ignis.fatuus.fr" target="_blank"><i class="fab fa-facebook-f fa-2x"></i></a></li>
+        <li><a href="https://www.youtube.com/channel/UCkzvbL1C3X86Ty4uqV7LaTQ" target=" _blank"><i class="fab fa-youtube fa-2x"></i></a></li>
+      </ul>
+    </footer>
   </body>
-
-  <footer>
-    <div class="button">
-      <a class="btn" href="#">Contactez-nous</a>
-    </div>
-
-    <div class="mentions">
-      <p>Conception : <span><a href="http://katiaparisot.fr/">Katia PARISOT</a></span>  Développement : <span><a href="https://juliendemougin.fr">Julien DEMOUGIN</a></span></p>
-      <p class=copyright><span><a href="">© Ignis Fatuus </a><label id="year_copy"></label></span></p>
-    </div>
-    <ul class="socialMedia">
-      <li><a href="#"><i class="fab fa-facebook-f fa-x2"></i></a></li>
-      <li><a href="#"></a><i class="fab fa-youtube fa-x2"></i></li>
-    </ul>
-  </footer>
+  <script src="assets/js/script.js"></script>
 </html>
