--- a/home.html
+++ b/home.html
@@ -84,7 +84,7 @@ IGNIS FATUUS a partager la scène avec ADX, DRAKKAR, NO RETURN, MISANTHROPE, INH
     </main>
 
     <footer>
-      <div class="btn">
+      <div class="button">
         <a class="btn" href="#">Contactez-nous</a>
       </div>
 
@@ -93,8 +93,8 @@ IGNIS FATUUS a partager la scène avec ADX, DRAKKAR, NO RETURN, MISANTHROPE, INH
         <p class=copyright><span><a href="">© Ignis Fatuus </a><label id="year_copy"></label></span></p>
       </div>
       <ul class="socialMedia">
-        <li><a href="#"><i class="fab fa-facebook-f fa-x2"></i></a></li>
-        <li><a href="#"></a><i class="fab fa-youtube fa-x2"></i></li>
+        <li><a href="#"><i class="fab fa-facebook-f fa-2x"></i></a></li>
+        <li><a href="#"></a><i class="fab fa-youtube fa-2x"></i></li>
       </ul>
   </footer>
   </body>
