navpanier page accueil shop

--- a/home.html
+++ b/home.html
@@ -66,11 +66,11 @@ IGNIS FATUUS a partager la scène avec ADX, DRAKKAR, NO RETURN, MISANTHROPE, INH
         <div class="space wmspace">
           <h2>Discographie</h2>
           <div class="spacer wmspacer"></div>
-      <img class="photoD1" src="assets/img/ignisfatuussoulbreaker.png" alt="soulbreaker">
-      <img class="photoD2" src="assets/img/ignisfatuussecondoffering.JPG" alt="secondoffering">
-      <img class="photoD3" src="assets/img/ignisfatuusundercommand.jpg" alt="undercommand">
-
-
+        </div>
+        <div class="albums">
+          <img class="photoD1" src="assets/img/ignisfatuussoulbreaker.png" alt="soulbreaker">
+          <img class="photoD2" src="assets/img/ignisfatuussecondoffering.JPG" alt="secondoffering">
+          <img class="photoD3" src="assets/img/ignisfatuusundercommand.jpg" alt="undercommand">
         </div>
       </div>
 
