--- a/contact.html
+++ b/contact.html
@@ -34,20 +34,15 @@
 
       <div class="formulaire">
         <form action="/my-handling-form-page" method="post">
-          <div class="civilite">
-            <div>
-              <input type="radio" id="Madame" name="civilite" value="Madame"
-                     checked>
-              <label for="Madame">Madame</label>
-            </div>
-            <div>
-              <input type="radio" id="Monsieur" name="civilite" value="Monsieur"
-                     checked>
-              <label for="Monsieur">Monsieur</label>
-            </div>
-          </div>
+            <label class="cont" for="madame">madame
+              <input type="radio" name="radio" value="">
+              <span class="chekmark"></span>
+            </label>
+            <label class="cont" for="monsieur">monsieur
+              <input type="radio" name="radio" value="">
+              <span class="chekmark"></span>
+            </label>
 
-          <div class="nom">
             <div>
               <label for="name">Nom :</label>
               <input type="text" id="lastname" name="user_name">
@@ -60,9 +55,7 @@
               <label for="name">Société :</label>
               <input type="text" id="company" name="user_company">
             </div>
-            </div>
 
-          <div class="coordonnees">
             <div>
               <label for="mail">e-mail :</label>
               <input type="email" id="mail" name="user_mail">
@@ -72,7 +65,6 @@
               <input type="number" id="phone" name="user_phonenumber">
             </div>
 
-          <div class="Message">
             <div>
               <label for="name">Objet :</label>
               <input type="text" id="object" name="user_object">
@@ -81,10 +73,11 @@
             <label for="msg">Message :</label>
             <textarea id="msg" name="user_message"></textarea>
             </div>
-          </div>
+        <div class="button btnform">
+          <a class="btn" href="#">Envoyer</a>
         </div>
       </form>
-            <a class="btn" href="#">Envoyer</a>
+
       </div>
     </main>
 
