--- a/contact.html
+++ b/contact.html
@@ -34,45 +34,44 @@
 
       <div class="formulaire">
         <form action="/my-handling-form-page" method="post">
-            <label class="cont" for="madame">madame
-              <input type="radio" name="radio" value="">
-              <span class="chekmark"></span>
-            </label>
-            <label class="cont" for="monsieur">monsieur
-              <input type="radio" name="radio" value="">
-              <span class="chekmark"></span>
-            </label>
+          <div class="champs">
+            <div class="civilite">
+              <label class="cont" for="madame">madame
+                <input type="radio" name="radio" value="">
+                <span class="chekmark"></span>
+              </label>
+              <label class="cont" for="monsieur">monsieur
+                <input type="radio" name="radio" value="">
+                <span class="chekmark"></span>
+              </label>
+            </div>
+              <div>
+                <input type="text" id="lastname" name="user_name" placeholder="Nom">
+              </div>
+              <div>
+                <input type="text" id="firstname" name="user_name" placeholder="Prénom">
+              </div>
+              <div>
+                <input type="text" id="company" name="user_company" placeholder="Société">
+              </div>
+              <div>
+                <input type="email" id="mail" name="user_mail" placeholder="Email">
+              </div>
+              <div>
+                <input type="number" id="phone" name="user_phonenumber" placeholder="Téléphone">
+              </div>
+            
+          </div>
 
+          <div class="message">
             <div>
-              <label for="name">Nom :</label>
-              <input type="text" id="lastname" name="user_name">
+              <input type="text" id="object" name="user_object" placeholder="Objet">
             </div>
             <div>
-              <label for="name">Prénom :</label>
-              <input type="text" id="firstname" name="user_name">
+            <textarea id="msg" name="user_message" placeholder="Votre message"></textarea>
             </div>
-            <div>
-              <label for="name">Société :</label>
-              <input type="text" id="company" name="user_company">
-            </div>
+          </div>
 
-            <div>
-              <label for="mail">e-mail :</label>
-              <input type="email" id="mail" name="user_mail">
-            </div>
-            <div>
-              <label for="mail">Téléphone :</label>
-              <input type="number" id="phone" name="user_phonenumber">
-            </div>
-
-            <div>
-              <label for="name">Objet :</label>
-              <input type="text" id="object" name="user_object">
-            </div>
-            <div>
-            <label for="msg">Message :</label>
-            <textarea id="msg" name="user_message"></textarea>
-            </div>
         <div class="button btnform">
           <a class="btn" href="#">Envoyer</a>
         </div>
