--- a/contact.html
+++ b/contact.html
@@ -34,14 +34,14 @@
 
       <div class="formulaire">
         <form action="/my-handling-form-page" method="post">
-            <label class="cont" for="madame">madame
-              <input type="radio" name="radio" value="">
-              <span class="chekmark"></span>
-            </label>
-            <label class="cont" for="monsieur">monsieur
-              <input type="radio" name="radio" value="">
-              <span class="chekmark"></span>
-            </label>
+          <label class="container">Monsieur
+            <input type="radio" checked="checked" name="radio">
+            <span class="checkmark"></span>
+          </label>
+          <label class="container">Madame
+            <input type="radio" name="radio">
+            <span class="checkmark"></span>
+          </label>
 
             <div>
               <label for="name">Nom :</label>
