--- a/contact.html
+++ b/contact.html
@@ -37,13 +37,13 @@
 
           <div class="champs">
             <div class="civilite">
-              <label class="container" for="madame">madame
-                <input type="radio" name="radio" value="">
-                <span class="chekmark"></span>
+              <label class="container">Monsieur
+                <input type="radio" checked="checked" name="radio">
+                <span class="checkmark"></span>
               </label>
-              <label class="container" for="monsieur">monsieur
-                <input type="radio" name="radio" value="">
-                <span class="chekmark"></span>
+              <label class="container">Madame
+                <input type="radio" name="radio">
+                <span class="checkmark"></span>
               </label>
             </div>
               <div>
