--- a/accueilshop.html
+++ b/accueilshop.html
@@ -10,12 +10,12 @@
 
   <body>
     <header>
-      <div class="menu">
+      <div class="menuShop">
         <ul>
-          <li><a href="#Retour">Retour au site</a></li>
-          <li><a href="#"><img src="assets/img/ignisfatuus-logoshop.png" alt=""><h1>Ignis Fatuus</h1></a></li>
-          <li><a href="#S'identifier">S'identifier/créer un compte</a></li>
-          <li><a href="#">Panier</a></li>
+          <li><a href="#Retour"><i class="fas fa-arrow-left"></i><p>Retour au site</p></a></li>
+          <li><a href="#"><img src="assets/img/ignisfatuus-logoshop.png" alt=""><h1>  Ignis Fatuus</h1></a></li>
+          <li><a href="#S'identifier"><i class="fas fa-user-friends"></i><p>S'identifier/créer un compte</p></a></li>
+          <li><a href="#"><i class="fas fa-shopping-cart"></i><p>Panier</p></a></li>
         </ul>
       </div>
     </header>
