--- a/home.html
+++ b/home.html
@@ -68,9 +68,30 @@ IGNIS FATUUS a partager la scène avec ADX, DRAKKAR, NO RETURN, MISANTHROPE, INH
           <div class="spacer wmspacer"></div>
         </div>
         <div class="albums">
-          <img class="photoD1" src="assets/img/ignisfatuussoulbreaker.png" alt="soulbreaker">
-          <img class="photoD2" src="assets/img/ignisfatuussecondoffering.JPG" alt="secondoffering">
-          <img class="photoD3" src="assets/img/ignisfatuusundercommand.jpg" alt="undercommand">
+          <div class="album">
+            <img class="photoD1" src="assets/img/ignisfatuussoulbreaker.png" alt="soulbreaker">
+            <div class="description">
+              <h3>Soulbreaker</h3>
+              <span class="sep"></span>
+              <h3>2012</h3>
+            </div>
+          </div>
+          <div class="album">
+            <img class="photoD2" src="assets/img/ignisfatuussecondoffering.JPG" alt="secondoffering">
+            <div class="description">
+              <h3>Second Offering</h3>
+              <span class="sep"></span>
+              <h3>2016</h3>
+            </div>
+          </div>
+          <div class="album">
+            <img class="photoD3" src="assets/img/ignisfatuusundercommand.jpg" alt="undercommand">
+            <div class="description">
+              <h3>Under command of the Leviathan</h3>
+              <span class="sep"></span>
+              <h3>2019</h3>
+            </div>
+          </div>
         </div>
       </div>
 
